samples/_failures_safe/1761491432_a13190_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b154c51c.c: In function ‘main’:
./samples/SAFE/__tmp_b154c51c.c:153:17: error: expected expression at end of input
  153 |                 } else
      |                 ^
./samples/SAFE/__tmp_b154c51c.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b154c51c.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b154c51c.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b154c51c.c:153:17: error: expected declaration or statement at end of input
